--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cartalyst/sentinel",
+    "name": "egfl/sentinel",
     "description": "PHP 7.3+ Fully-featured Authentication & Authorization System",
     "keywords": [
         "php",
